latest post section add

--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* custom.css */
-
-@layer utilities {
-    .transition-max-h {
-      transition-property: max-height;
-    }
-  }
-  
+* {
+  font-family: sans-serif
+}
